--- a/AdvR/hadley_Radv.rmd
+++ b/AdvR/hadley_Radv.rmd
@@ -1157,7 +1157,123 @@ by(airquality[c("Ozone", "Temp")], airquality$Month, mean, na.rm = TRUE) ##Error
 ##################
 #to make base functionals consistent
 
+###Exercise2: There¡¯s no equivalent to split() + vapply(). Should there be? When would it be useful? Implement one yourself.
+pulse <- round(rnorm(22, 70, 10 / 3)) + rep(c(0, 5), c(10, 12))
+group <- rep(c("A", "B"), c(10, 12))
+data=split(pulse, group)
+sapply(data, length) #worked even data is ragged
+vapply(data,as.character,FUN.VALUE = character(10)) #not worked,FUN[[2]] is 12 length
+vapply(data, is.numeric,FUN.VALUE = logical(1)) # worked cuz fun return a logical result each loop
+vapply(data, is.numeric,FUN.VALUE = numeric(1)) #worked cuz logical<numeric<double<complex
+vapply(data,is.numeric,character(1))
+#not worked, cuz coercion to character is not in vapply coercion table 
+vapply(data, function(x){if(is.numeric(x)) as.character(is.numeric(x))},FUN.VALUE = character(1)) 
+#wored, cuz func coerced result to character that matches FUN.VALUE
+data$A=c(data$A,c(1,2))
+vapply(data,as.character,FUN.VALUE = character(12)) #worked cuz each loop result length is 12
+#Summary: vapply applies only to unragged data and is not suitable for character results when coercion is needed for results generated from func
 
+###Exercise3: Implement a pure R version of split(). (Hint: use unique() and subsetting.) Can you do it without a for loop?
+split(pulse, group) #split vector
+
+df=data.frame(p=pulse,g=group)
+split(df,group) #split dataframe
+
+mysplit=function(data,group){
+  if(is.data.frame(data)==FALSE) tapply(data,group,`[`)
+  else by(data,group,`[`)
+}
+##??how not to use for loop???
+
+#DHDC08P1_0304:1:2108:11503:92934#AGTCAACA
+
+
+########################
+##Manipulating list#####
+########################
+#Reduce :also known as combine step, fold step.
+l <- replicate(5, sample(1:10, 15, replace = T), simplify = FALSE) #simplify =FALSE to generate list
+intersect(intersect(intersect(intersect(l[[1]], l[[2]]),
+  l[[3]]), l[[4]]), l[[5]])
+Reduce(intersect, l)
+#compute first two args, then result with third, then result with fourth
+
+
+############################
+###Predicated functionals###
+############################
+# Filter() only return elements match the predicate,wont return data frame with specific col match predicate
+# Find() return first element match or last element with right =TRUE
+# Position() return pos as above
+
+###Exercise1: Why isn¡¯t is.na() a predicate function? What base R function is closest to being a predicate version of is.na()?
+#is.na is not a predicate cuz predicate returns a single T or F, is.na could return a vector of T,F
+#anyNA
+
+###Exercise2: Use Filter() and vapply() to create a function that applies a summary statistic to every numeric column in a data frame.
+df <- data.frame(x = 1:3, y = c("a", "b", "c"),z=2:4)
+mysummary=function(df){
+  summary(Filter(is.numeric,df))
+}
+
+###Exercise4:Implement Any(), a function that takes a list and a predicate function, and returns TRUE if the predicate function returns TRUE for any of the inputs. Implement All() similarly.
+myany=function(inputlist,f){
+  TRUE %in% lapply(inputlist,f)
+}
+myall=function(inputlist,f){
+  !(FALSE %in% lapply(inputlist,f))
+}
+
+###???Exercise5:Implement the span() function from Haskell: given a list x and a predicate function f, span returns the location of the longest sequential run of elements where the predicate is true. (Hint: you might find rle() helpful.)
+
+##############################
+###mathematical functionals###
+##############################
+# integrate() finds the area under the curve defined by f()
+# uniroot() finds "first" where f() hits zero
+# optimise() finds the location of lowest (or highest) value of f()
+
+uniroot(sin, c(2,2*pi)) #find first x where sin(x) is 0
+optimise(sin, c(0, 2 * pi),maximum = T) #find x where sin(x) is max
+
+#optimise is widely used for computing ML of things
+#First, we create a function factory that, given a dataset, returns a function that computes the negative log likelihood (NLL) for parameter lambda. In R, it¡¯s common to work with the negative since optimise() defaults to finding the minimum.
+
+poisson_nll <- function(x) {
+  n <- length(x)
+  sum_x <- sum(x)
+  function(lambda) {
+    n * lambda - sum_x * log(lambda) # + terms not involving lambda
+  }
+}
+x1 <- c(41, 30, 31, 38, 29, 24, 30, 29, 31, 38)
+x2 <- c(6, 4, 7, 3, 3, 7, 5, 2, 2, 7, 5, 4, 12, 6, 9)
+nll1 <- poisson_nll(x1)
+nll2 <- poisson_nll(x2)
+
+optimise(nll1, c(0, 100))$minimum
+#> [1] 32.09999
+optimise(nll2, c(0, 100))$minimum
+#> [1] 5.466681
+
+###optim(): a generalisation of optimise() that works with more than one dimension
+
+###Exercies1: Implement arg_max(). It should take a function and a vector of inputs, and return the elements of the input where the function returns the highest value. For example, arg_max(-10:5, function(x) x ^ 2) should return -10. arg_max(-5:5, function(x) x ^ 2) should return c(-5, 5). Also implement the matching arg_min() function.
+arg_max=function(x,f){
+  res=f(x)
+  x[which(res==max(res))]
+}
+
+###Exercise2: Challenge: read about the fixed point algorithm. Complete the exercises using R.
+
+
+#####################################
+####Loops that better left as is#####
+#####################################
+#1. Modifying in place
+#If you need to modify part of an existing data frame, it¡¯s often better to use a for loop. 
+#2. Recursive relationships
+#It¡¯s hard to convert a for loop into a functional when the relationship between elements is not independent, or is defined recursively.
 ```
 
 
