--- a/AdvR/hadley_Radv.rmd
+++ b/AdvR/hadley_Radv.rmd
@@ -1447,13 +1447,33 @@ row_max=function(data){
 ###variant, and array variants in the rows.
 ###a. Fill in the cells with the names of base R functions that perform each of the roles.
 ###b. Compare the names and arguments of the existing R functions. How consistent are they? How could ###   you improve them?
-###c. Complete the matrix by implementing any missing functions.
-a.              and   or  add   multiply   smaller   larger
-binary          &     |    +       *         <          >
-reducing var
-vectorised var
-array var
+# ###c. Complete the matrix by implementing any missing functions.
+# a.              and   or  add   multiply   smaller   larger
+# binary          &&    ||    +       *                   
+# reducing var    all   any  sum     prod      min       max
+# vectorised var  &     |     +       *        pmin      pmax
+# array var                   +       *
 
+#extra notes:
+library(stringr)
+library(ggplot2)
+randomise <- function(f) f(runif(1e3))
+randomise(mean)
+#> [1] 0.5115665
+randomise(mean)
+#> [1] 0.503939
+randomise(sum)
+
+replicate(500,randomise(sum)) %>%
+  data.frame(x = .) %>%
+  ggplot(aes(x = x)) + geom_density()
+
+###??Exercise3: How does paste() fit into this structure? What is the scalar binary function that underlies paste()? What are the sep and collapse arguments to paste() equivalent to? Are there any paste variants that don¡¯t have existing R implementations?
+#paste(c(1,3),c(4,1),sep="-",collapse="+") : "1-4+3-1"
+#binary is "+"? 
+#sep is used in a Map function
+#collapse is used in a Reduce function to apply "+" to every two results of Map function
+#paste seems to be functional for all variants like vectorise, array, list, data.frame, etc
 
 ```
 
